--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,14 @@ body, html {
   background-size: cover;
 }
 
+.container{
+	background-image: url("/landingpage.png");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .canvas {
 	width: 50%;
 	height:50%
