--- a/public/style.css
+++ b/public/style.css
@@ -29,6 +29,13 @@ ul.nav a:hover {
 	color: grey;
 }
 
+.box {
+	margin:5%;
+	padding:10%;
+	/*border: 1px solid black;*/
+	background-color: rgba(230,230,230,0.5);
+}
+
 #main{
 	background-image: url("/landingpage.png");
   height: 100%;
@@ -40,5 +47,4 @@ ul.nav a:hover {
 .canvas {
 	width: 50%;
 	height:50%
-
 }
