--- a/public/style.css
+++ b/public/style.css
@@ -33,16 +33,16 @@ ul.nav a:hover {
 	margin:5%;
 	padding:10%;
 	/*border: 1px solid black;*/
-	background-color: rgba(230,230,230,0.5);
+	background-color: rgba(220,220,220,0.3);
 }
 
-#main{
+/*#main{
 	background-image: url("/landingpage.png");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
+}*/
 
 .canvas {
 	width: 50%;
