--- a/public/style.css
+++ b/public/style.css
@@ -35,7 +35,7 @@ ul.nav a:hover {
 	padding:5% 10%;
 
 	/*border: 1px solid black;*/
-	background-color: rgba(220,220,220,0.3);
+	background-color: rgba(220,220,220,0.5);
 }
 
 .box-white {
@@ -62,6 +62,10 @@ ul.nav a:hover {
 	background-color: rgba(110, 245, 160,0.5)
 }
 
+.progress{
+	background-color:rgba(255, 99, 132, 0.2);
+}
+
 .canvas {
 	width: 50%;
 	height:50%
@@ -84,4 +88,8 @@ ul.nav a:hover {
 
 #main{
 margin: 10% auto;
+}
+
+.bartext {
+	color: white;
 }
